# src/app/api/links/route.ts
@@ -4,42 +4,50 @@ import { NextRequest, NextResponse } from 'next/server';
 type Params = {
     markdown: string;
 };
-
 /**
  * @swagger
- * definitions:
- *   RenderLinks:
- *     required:
- *       - hash
- *       - html
- *     properties:
- *       hash:
- *         type: string
- *       png:
- *         type: string
- *       html:
- *         type: string
- *       interactive:
- *         type: string
+ * components:
+ *   schemas:
+ *     RenderLinks:
+ *       type: object
+ *       properties:
+ *         hash:
+ *           type: string
+ *         png:
+ *           type: string
+ *         html:
+ *           type: string
+ *         interactive:
+ *           type: string
+ *
  */
+interface RenderLinks {
+    hash: string;
+    png: string;
+    html: string;
+    interactive: string;
+}
 
 /**
  * @swagger
  * /api/links:
  *   get:
+ *     operationId: renderLinks
  *     description: Returns the HTML or PNG render URL given markdown content in raw text.
  *     parameters:
  *       - name: markdown
  *         in: query
  *         description: markdown content in raw text.
  *         required: true
- *         type: string
+ *         schema:
+ *           type: string
  *     responses:
  *       200:
+ *         description: Successful response
  *         content:
  *           application/json:
  *             schema:
- *               $ref: '#/definitions/RenderLinks'
+ *               $ref: '#/components/schemas/RenderLinks'
  *
  */
 
@@ -53,10 +61,12 @@ export async function GET(req: NextRequest, context: { params: Params }) {
 
     const hash = encode(markdown as string);
 
-    return NextResponse.json({
+    const RenderLinks: RenderLinks = {
         hash,
         png: `https://m3.vercel.app/api/render/png/${hash}`,
         html: `https://m3.vercel.app/api/render/html/${hash}`,
         interactive: `https://m3.vercel.app/mind/interactive?hash=${hash}`,
-    });
+    };
+
+    return NextResponse.json(RenderLinks);
 }
